--- a/processing_scripts/known_functional_abundances_metadata.ipynb
+++ b/processing_scripts/known_functional_abundances_metadata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b01e8244-18bf-495e-b2ae-c864a28def55",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "81fb9a7b-1df2-4ae8-b421-44804da8e2f9",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b6e5c2ed-1f8c-4f52-8e42-4b6908700f3c",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b67d0f71-7d22-45e4-a7d7-4290e98eb6dc",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3d59c7a5-4984-449a-8d31-d2250629de64",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0d26c62f-eb75-427f-bfd3-392c88555d66",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7935cd50-636d-431e-8364-392f49c00500",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "4            COG0004  TARA_100_DCM_0.22-3  2.662103e+04"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1957ccfa-8385-4634-a8a2-5488bb36617c",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "96113e13-4800-4dad-a3aa-3ee646cad011",
    "metadata": {},
    "outputs": [],
@@ -568,12 +568,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "468a67e8-7ed3-4511-819f-027662112a51",
    "metadata": {},
    "outputs": [],
    "source": [
     "OG_category_df = pd.concat([COG_df, NOG_df])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e6c9d414-545c-4493-b1f4-64118abc73cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OG</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>COG0393</td>\n",
+       "      <td>Function unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>COG4055</td>\n",
+       "      <td>Coenzyme metabolism</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>COG1943</td>\n",
+       "      <td>Replication and repair</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>COG0861</td>\n",
+       "      <td>Inorganic ion transport and metabolism</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>COG3010</td>\n",
+       "      <td>Carbohydrate metabolism and transport</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84000</th>\n",
+       "      <td>NOG205709</td>\n",
+       "      <td>Post-translational modification, protein turno...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84001</th>\n",
+       "      <td>NOG240538</td>\n",
+       "      <td>Function unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84002</th>\n",
+       "      <td>NOG145935</td>\n",
+       "      <td>Function unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84003</th>\n",
+       "      <td>NOG145934</td>\n",
+       "      <td>Function unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84004</th>\n",
+       "      <td>NOG145936</td>\n",
+       "      <td>Function unknown</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>88878 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              OG                                           category\n",
+       "0        COG0393                                   Function unknown\n",
+       "1        COG4055                                Coenzyme metabolism\n",
+       "2        COG1943                             Replication and repair\n",
+       "3        COG0861             Inorganic ion transport and metabolism\n",
+       "4        COG3010              Carbohydrate metabolism and transport\n",
+       "...          ...                                                ...\n",
+       "84000  NOG205709  Post-translational modification, protein turno...\n",
+       "84001  NOG240538                                   Function unknown\n",
+       "84002  NOG145935                                   Function unknown\n",
+       "84003  NOG145934                                   Function unknown\n",
+       "84004  NOG145936                                   Function unknown\n",
+       "\n",
+       "[88878 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OG_category_df"
    ]
   },
   {
@@ -1127,6 +1245,60 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "6ba3768e-da2e-483b-bbcd-37e193170caa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OG_relative_df = OG_relative_df.replace(['(DCM) deep chlorophyll maximum layer (ENVO:01000326)', \n",
+    "                 '(SRF) surface water layer (ENVO:00002042)',\n",
+    "                 '(MES) mesopelagic zone (ENVO:00000213) & marine oxygen minimum zone (ENVO:01000065)',\n",
+    "                 '(MES) mesopelagic zone (ENVO:00000213)',\n",
+    "                 '(DCM) deep chlorophyll maximum layer (ENVO:01000326) & marine oxygen minimum zone (ENVO:01000065)',\n",
+    "                 '(MIX) marine epipelagic mixed layer (ENVO:01000061)',\n",
+    "                 'Westerlies Biome',\n",
+    "                 'Coastal Biome ',\n",
+    "                 'Trades Biome',\n",
+    "                 'Polar Biome',\n",
+    "                 '(NAO) North Atlantic Ocean [MRGID:1912]',\n",
+    "                 '(MS) Mediterranean Sea [MRGID:1905]', \n",
+    "                 '(RS) Red Sea [MRGID:4264]',\n",
+    "                 '(IO) Indian Ocean [MRGID:1904]',\n",
+    "                 '(SAO) South Atlantic Ocean [MRGID:1914]',\n",
+    "                 '(SO) Southern Ocean [MRGID:1907]',\n",
+    "                 '(SPO) South Pacific Ocean [MRGID:1910]',\n",
+    "                 '(NPO) North Pacific Ocean [MRGID:1908]',\n",
+    "                 '(NAST-E) North Atlantic Subtropical Gyral Province [MRGID:21467]',\n",
+    "                 '(MEDI) Mediterranean Sea, Black Sea Province [MRGID:21465]',\n",
+    "                 '(REDS) Red Sea, Persian Gulf Province [MRGID:21474]',\n",
+    "                 '(ARAB) Northwest Arabian Sea Upwelling Province [MRGID:21475]',\n",
+    "                 '(MONS) Indian Monsoon Gyres Province [MRGID:21471]',\n",
+    "                 '(ISSG) Indian South Subtropical Gyre Province [MRGID:21472]',\n",
+    "                 '(EAFR) Eastern Africa Coastal Province [MRGID:21473]',\n",
+    "                 '(BENG) Benguela Current Coastal Province [MRGID:21470]',\n",
+    "                 '(SATL) South Atlantic Gyral Province [MRGID:21459]',\n",
+    "                 '(FKLD) Southwest Atlantic Shelves Province [MRGID:21469]',\n",
+    "                 '(ANTA) Antarctic Province [MRGID:21502]',\n",
+    "                 '(CHIL) Chile-Peru Current Coastal Province [MRGID:21495]',\n",
+    "                 '(SPSG) South Pacific Subtropical Gyre Province, North and South [MRGID:21486]',\n",
+    "                 '(PEOD) Pacific Equatorial Divergence Province [MRGID:21489]',\n",
+    "                 '(NPST) North Pacific Subtropical and Polar Front Provinces [MRGID:21484]',\n",
+    "                 '(PNEC) North Pacific Equatorial Countercurrent Province [MRGID:21488]',\n",
+    "                 '(CAMR) Central American Coastal Province [MRGID:21494]',\n",
+    "                 '(GUIA) Guianas Coastal Province [MRGID:21463]',\n",
+    "                 '(CARB) Caribbean Province [MRGID:21466]',\n",
+    "                 '(GFST) Gulf Stream Province [MRGID:21454]',\n",
+    "                 '(NAST-W) North Atlantic Subtropical Gyral Province [MRGID:21455]'\n",
+    "                ], \n",
+    "                ['DCM', 'SRF', 'MES/OMZ', 'MES', 'DCM/OMZ', 'MIX', 'Westerlies', 'Coastal',\n",
+    "                 'Trades', 'Polar', 'NAO', 'MS',  'RS', 'IO', 'SAO', 'SO', 'SPO', 'NPO', 'NAST-E',\n",
+    "                 'MEDI', 'REDS', 'ARAB', 'MONS', 'ISSG', 'EAFR', 'BENG', 'SATL', 'FKLD', 'ANTA', 'CHIL',\n",
+    "                 'SPSG', 'PEOD', 'NPST', 'PNEC', 'CAMR', 'GUIA', 'CARB', 'GFST', 'NAST-W'\n",
+    "                ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "7fdde2fd-a3c7-41c6-89f2-49222ecf16c0",
    "metadata": {},
    "outputs": [],
